backend/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db
  namespace: default
spec:
  type: ExternalName
  externalName: postgres-vm-cluster.yourdomain.local # Replace with your VM Cluster DNS/IP
---
apiVersion: v1
kind: Service
metadata:
  name: redis-cache
  namespace: default
spec:
  type: ExternalName
  externalName: redis-vm-cluster.yourdomain.local # Replace with your VM Cluster DNS/IP
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  namespace: default
spec:
  ports:
    - name: broker
      port: 9092
      targetPort: 9092
  selector:
    app: kafka
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: default
  annotations:
    service.kubernetes.io/topology-mode: Auto # Zone affinity logic
spec:
  ports:
    - port: 8087
      targetPort: 8087
  selector:
    app: auth-service
---
apiVersion: v1
kind: Service
metadata:
  name: merchant-service
  namespace: default
  annotations:
    service.kubernetes.io/topology-mode: Auto
spec:
  ports:
    - port: 8085
      targetPort: 8085
  selector:
    app: merchant-service
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: default
  annotations:
    service.kubernetes.io/topology-mode: Auto
spec:
  ports:
    - port: 8083
      targetPort: 8083
  selector:
    app: order-service
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
  namespace: default
spec:
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app: api-gateway
